src/test/ui/parser/keyword-use-as-identifier.stderr
error: expected identifier, found keyword `use`
  --> $DIR/keyword-use-as-identifier.rs:4:9
   |
LL |     let use = "foo";
   |         ^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#use = "foo";
   |         ^^^^^

error: aborting due to previous error

